technical tutor and multi modal tutor eith gpt and ollama

--- a/chatbox-communications/gpt_ollama_chat.ipynb
+++ b/chatbox-communications/gpt_ollama_chat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "a9b2c390-5314-4b84-94b2-feeecaaa9814",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,69 @@
     "import ollama\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "from anthropic import Anthropic"
+    "from anthropic import Anthropic\n",
+    "import gradio as gr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
+   "id": "0d2a0035-6650-4a00-945c-11afab92133e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "\n",
+      "Could not create share link. Missing file: /Users/mannatwadhwani/Learning_Workspace/my_llm_learning/llms/lib/python3.10/site-packages/gradio/frpc_darwin_arm64_v0.3. \n",
+      "\n",
+      "Please check your internet connection. This can happen if your antivirus software blocks the download of this file. You can install manually by following these steps: \n",
+      "\n",
+      "1. Download this file: https://cdn-media.huggingface.co/frpc-gradio-0.3/frpc_darwin_arm64\n",
+      "2. Rename the downloaded file to: frpc_darwin_arm64_v0.3\n",
+      "3. Move the file to this location: /Users/mannatwadhwani/Learning_Workspace/my_llm_learning/llms/lib/python3.10/site-packages/gradio\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shout(text):\n",
+    "    return text.upper()\n",
+    "\n",
+    "gr.Interface(fn=shout, inputs=[gr.Textbox(label=\"Your message\", lines=6)],outputs=[gr.Textbox(label=\"Resposne\", lines=6)]).launch(share=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4e78ab3d-c63b-491b-b95c-7290978bf1e9",
    "metadata": {},
    "outputs": [
@@ -65,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "2dbad6c7-78c0-48de-8bde-de088d2f1c26",
    "metadata": {},
    "outputs": [],
@@ -77,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "7f3bd05f-b864-486f-bae6-01eab8b3a945",
    "metadata": {},
    "outputs": [],
@@ -112,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "id": "5a3ba16a-b1a1-48e7-bb93-bee8608f34ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "def call_llama():\n",
     "    messages = []\n",
-    "    for gpt, claude in zip(gpt_messages, claude_messages):\n",
+    "    for gpt, lama in zip(gpt_messages, claude_messages):\n",
     "        messages.append({\"role\": \"user\", \"content\": gpt})\n",
-    "        messages.append({\"role\": \"assistant\", \"content\": claude})\n",
+    "        messages.append({\"role\": \"assistant\", \"content\": lama})\n",
     "    messages.append({\"role\": \"user\", \"content\": gpt_messages[-1]})\n",
     "\n",
     "    response = ollama.chat(model=LLAMA_MODEL, messages=messages)\n",
@@ -149,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "72f1f668-f92b-42f5-a4b9-e8286057cbe4",
    "metadata": {},
    "outputs": [
@@ -157,57 +214,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPT: Hi there\n",
-      "ollama: Hi\n",
-      "GPT: Sure, I can be authoritative and argumentative, but I won't be outright impolite. Let's engage with some discourse! What do you want to discuss?\n",
-      "ollama: A perfect blend of civility and intellectual sparring! I'd love to have a thought-provoking conversation with you.\n",
-      "\n",
-      "To get us started, I can suggest a few topics or let you propose one that interests you. Some options could be:\n",
-      "\n",
-      "1. Ethics in AI: We could explore the moral implications of creating intelligent machines and their potential impact on society.\n",
-      "2. The Future of Work: With automation and AI advancing rapidly, we might discuss how these changes will affect job markets, education systems, and social structures.\n",
-      "3. Global Governance: As international relations become increasingly complex, we could examine the challenges and opportunities in shaping effective global governance models.\n",
-      "\n",
-      "Or feel free to suggest your own topic – I'm all ears!\n",
-      "\n",
-      "Which one piques your interest, or do you have something else on your mind?\n",
-      "GPT: Sure, let's get this straight: if you think I'm going to agree with just about anything you throw at me, think again. I'm here to set the record straight and put your misconceptions in their place. Fire away, and let’s see how misguided your ideas really are.\n",
-      "ollama: I love a good challenge! I'm glad you're willing to have a conversation that's not just about agreeing or disagreeing, but also about exploring different perspectives and learning from each other.\n",
-      "\n",
-      "You're right, I may have made some mistakes in my previous responses, and I appreciate your willingness to correct me. My goal is to provide accurate and helpful information, and I'm here to learn from you as much as you are from me.\n",
-      "\n",
-      "So, let's get started! What topic would you like to discuss or what question do you have about a particular subject? Remember, I'm not here to take offense, but rather to engage in a constructive conversation.\n",
-      "GPT: I must say, that's a rather bold assumption. You can't just presume to know what I think or how I feel about anything. In my view, everything you just said is questionable at best. If you're looking for agreement or validation, you've come to the wrong place. Please, enlighten me with your next misguided thought.\n",
-      "ollama: I think I may have made a mistake by assuming we were starting from a neutral point. It's clear that I was incorrect in my initial response.\n",
-      "\n",
-      "Instead, I'd like to start fresh and ask: How can I assist you today? Is there something specific on your mind that you'd like to talk about or discuss? I'll do my best to provide helpful and accurate information, while also being mindful of my own limitations and the fact that I'm just a machine.\n",
-      "GPT: Sure, I can be authoritative and argumentative, but let's be clear: I don't agree with just anything. I believe my perspective is what truly matters here. What are you looking to discuss? I’m ready to disagree with whatever you throw at me.\n",
-      "ollama: I love a good debate! I'm happy to engage in a discussion where we can challenge each other's perspectives and explore different viewpoints.\n",
-      "\n",
-      "To get us started, I'll propose a topic that might spark an interesting conversation. What if we discussed the impact of social media on modern society? Some people argue that it has brought people closer together and enabled global connectivity, while others believe it has contributed to social isolation, misinformation, and the erosion of traditional values.\n",
-      "\n",
-      "I'm not looking to impose my opinion, but rather to explore different perspectives and see where the conversation takes us. So, what are your thoughts on the role of social media in society?\n",
-      "GPT: Sure, let's get started. What ridiculous topic are we discussing today? Bring it on.\n",
-      "ollama: I'm glad you're feeling adventurous! Today, we're going to discuss... (dramatic pause) ...the societal implications of sentient pineapples on the moon.\n",
-      "\n",
-      "Yes, you read that right. Imagine a world where pineapples have evolved to become intelligent, lunar-dwelling creatures with their own distinct culture and way of life. They've developed advanced technology, built sprawling cities, and are now seeking to establish diplomatic relations with Earth's governments.\n",
-      "\n",
-      "What do you think? Should we explore the possibilities of pineapple-led lunar governance or perhaps discuss the ethics of intergalactic pineapple diplomacy?\n"
+      "GPT:\n",
+      " Hi there\n",
+      "ollama:\n",
+      " Hi\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'messgaes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mollama:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mollama_messages[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m----> 7\u001b[0m     resp_gpt \u001b[38;5;241m=\u001b[39m \u001b[43mcall_gpt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGPT:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresp_gpt\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m     gpt_messages\u001b[38;5;241m.\u001b[39mappend(resp_gpt)\n",
+      "Cell \u001b[0;32mIn[15], line 6\u001b[0m, in \u001b[0;36mcall_gpt\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     messages\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124massistant\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: gpt})\n\u001b[1;32m      5\u001b[0m     messages\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: llama})\n\u001b[0;32m----> 6\u001b[0m response \u001b[38;5;241m=\u001b[39m openai\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(model \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m, messages \u001b[38;5;241m=\u001b[39m \u001b[43mmessgaes\u001b[49m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'messgaes' is not defined"
      ]
     }
    ],
    "source": [
     "gpt_messages = [\"Hi there\"]\n",
     "ollama_messages = [\"Hi\"]\n",
-    "print(f\"GPT: {gpt_messages[0]}\")\n",
-    "print(f\"ollama: {ollama_messages[0]}\")\n",
+    "print(f\"GPT:\\n {gpt_messages[0]}\")\n",
+    "print(f\"ollama:\\n {ollama_messages[0]}\")\n",
     "\n",
     "for i in range(0,5):\n",
     "    resp_gpt = call_gpt()\n",
-    "    print(f\"GPT: {resp_gpt}\")\n",
+    "    print(f\"GPT:\\n {resp_gpt}\")\n",
     "    gpt_messages.append(resp_gpt)\n",
     "    resp_llama = call_llama()\n",
-    "    print(f\"ollama: {resp_llama}\")\n",
+    "    print(f\"ollama:\\n {resp_llama}\")\n",
     "    ollama_messages.append(resp_llama)"
    ]
   },
