--- a/technical-tutor/gpt-tutor.ipynb
+++ b/technical-tutor/gpt-tutor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a052ea1-da99-4720-9c89-ec9093cdb670",
    "metadata": {
     "editable": true,
@@ -16,12 +16,13 @@
     "import os\n",
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
-    "from IPython.display import Markdown, display, update_display"
+    "from IPython.display import Markdown, display, update_display\n",
+    "import gradio as gr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "249f805b-03d7-4dfa-942f-82ff12155447",
    "metadata": {},
    "outputs": [],
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "918b423a-361d-4809-8e90-3e62f4c12240",
    "metadata": {},
    "outputs": [
@@ -45,7 +46,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter your question: how to execute all cells of jupyter lab automatically in sequence\n"
+      "Please enter your question: hello\n"
      ]
     }
    ],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "8bb0eca7-b030-4dea-a0d3-725881fb6bc3",
    "metadata": {},
    "outputs": [],
@@ -70,90 +71,105 @@
     "def get_user_prompt(ques):\n",
     "    prompt = ques\n",
     "    return prompt\n",
-    "\n",
-    "messages = [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": get_user_prompt(my_question)}]"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "fa3fbcfd-c821-4804-862f-6103dcbea413",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "def ask_gpt_tutor(ques):\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": get_user_prompt(ques)}]\n",
+    "    stream = openai.chat.completions.create(model = MODEL, messages = messages, stream = True)\n",
+    "    #display(Markdown(response.choices[0].message.content))\n",
+    "    \n",
+    "    response = \"\"\n",
+    "    display_handle = display(Markdown(\"\"), display_id=True)\n",
+    "    for chunk in stream:\n",
+    "        response += chunk.choices[0].delta.content or ''\n",
+    "        response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
+    "        yield response\n",
+    "        #update_display(Markdown(response), display_id=display_handle.display_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "719a7c52-b77d-424a-a0a6-aeda20b14da0",
+   "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n"
+     ]
+    },
+    {
      "data": {
-      "text/markdown": [
-       "To execute all cells in a Jupyter Lab notebook automatically in sequence, you can use the built-in features of Jupyter Lab. Here's a step-by-step guide to do this:\n",
-       "\n",
-       "### Method 1: Using the Menu\n",
-       "\n",
-       "1. **Open Jupyter Lab**: Start your Jupyter Lab environment.\n",
-       "\n",
-       "2. **Select Your Notebook**: Open the notebook file (`.ipynb`) that you want to execute.\n",
-       "\n",
-       "3. **Run All Cells**:\n",
-       "    - Go to the menu at the top of the Jupyter Lab interface.\n",
-       "    - Click on **Run**.\n",
-       "    - Select **Run All Cells**. \n",
-       "\n",
-       "   This will execute all code cells in the order they appear in the notebook.\n",
-       "\n",
-       "### Method 2: Keyboard Shortcut\n",
-       "\n",
-       "1. **Open Jupyter Lab** and your desired notebook.\n",
-       "\n",
-       "2. **Execute All Cells**:\n",
-       "   - You can use the keyboard shortcut `Shift + Enter` to run cells one by one manually.\n",
-       "   - To run all cells at once, you can usually use `Ctrl + Shift + Enter`, depending on your configuration.\n",
-       "\n",
-       "### Method 3: Using Jupyter Notebook Commands\n",
-       "\n",
-       "You can also utilize the following commands in a cell to programmatically execute all the other cells:\n",
-       "\n",
-       "python\n",
-       "# Run all cells programmatically\n",
-       "from IPython.display import display, Javascript\n",
-       "\n",
-       "def run_all_cells():\n",
-       "    display(Javascript('IPython.notebook.execute_all_cells()'))\n",
-       "\n",
-       "run_all_cells()\n",
-       "\n",
-       "\n",
-       "### Additional Notes\n",
-       "\n",
-       "- **Cell Output**: When you execute all cells, check that you do not have any cells that unintentionally alter the state of the notebook or raise exceptions.\n",
-       "- **Kernel**: Make sure your notebook's kernel has been properly initialized with the necessary libraries before running all cells.\n",
-       "- **Dependencies**: Ensure the order of code execution respects any dependencies between cells (e.g., if cell A must run before cell B).\n",
-       "\n",
-       "By following these methods, you should be able to execute all cells in your Jupyter Lab notebook easily. Enjoy coding!"
-      ],
+      "text/markdown": [],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Could not create share link. Missing file: /Users/mannatwadhwani/Learning_Workspace/my_llm_learning/llms/lib/python3.10/site-packages/gradio/frpc_darwin_arm64_v0.3. \n",
+      "\n",
+      "Please check your internet connection. This can happen if your antivirus software blocks the download of this file. You can install manually by following these steps: \n",
+      "\n",
+      "1. Download this file: https://cdn-media.huggingface.co/frpc-gradio-0.3/frpc_darwin_arm64\n",
+      "2. Rename the downloaded file to: frpc_darwin_arm64_v0.3\n",
+      "3. Move the file to this location: /Users/mannatwadhwani/Learning_Workspace/my_llm_learning/llms/lib/python3.10/site-packages/gradio\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "stream = openai.chat.completions.create(model = MODEL, messages = messages, stream = True)\n",
-    "#display(Markdown(response.choices[0].message.content))\n",
-    "\n",
-    "response = \"\"\n",
-    "display_handle = display(Markdown(\"\"), display_id=True)\n",
-    "for chunk in stream:\n",
-    "    response += chunk.choices[0].delta.content or ''\n",
-    "    response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
-    "    update_display(Markdown(response), display_id=display_handle.display_id)"
+    "gr.Interface(fn=ask_gpt_tutor, inputs=[gr.Textbox(label=\"Your message\", lines=6)],outputs=[gr.Textbox(label=\"Resposne\", lines=6)]).launch(share=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719a7c52-b77d-424a-a0a6-aeda20b14da0",
+   "id": "85a1a9bb-71d1-4905-89ef-52bda4c37c66",
    "metadata": {},
    "outputs": [],
    "source": []
