--- a/technical-tutor/ollama_tutor.ipynb
+++ b/technical-tutor/ollama_tutor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ee58fa5d-315f-4da2-a964-c0e88f0f8111",
    "metadata": {},
    "outputs": [],
@@ -14,20 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ab1f8020-b0bb-4fe1-b6d3-9ef526da8062",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please enter your question: who has better performance between python and java in  general\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "system_prompt = \"You are an assistant who is expert in technology and coding, specially python and llms. You need to behave as a technical tutor and answer technical questions in Markdown\"\n",
     "\n",
     "def get_user_prompt(ques):\n",
     "    prompt = ques\n",
@@ -38,159 +29,99 @@
     "#yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
     "#\"\"\"\n",
     "\n",
-    "my_question = input(\"Please enter your question:\")\n",
     "\n",
-    "messages = [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": get_user_prompt(my_question)}]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "bbd7e356-0d61-4ce1-8ecd-ef4546592990",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_ollama_tutor(question):\n",
+    "    system_prompt = \"You are an assistant who is expert in technology and coding, specially python and llms. You need to behave as a technical tutor and answer technical questions in Markdown\"\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_prompt}, {\"role\": \"user\", \"content\": get_user_prompt(question)}]\n",
+    "    response = ollama.chat(model = MODEL, messages = messages, stream=True)\n",
+    "    for chunk in response:\n",
+    "        print(chunk[\"message\"][\"content\"], end=\"\", flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f8e2a7d1-cb42-4b78-8702-50c31f505d89",
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please enter your question: what is the latest version of java?\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Performance Comparison of Python and Java**\n",
+      "### Java Latest Version\n",
       "\n",
-      "In general, both Python and Java are popular choices for software development due to their popularity and versatility. However, the question remains: which one has better performance?\n",
+      "As of my knowledge cutoff in December 2023, the latest official release of Java is **Java 17**.\n",
       "\n",
-      "The answer depends on the specific use case, task, and requirements.\n",
+      "However, it's worth noting that Oracle has announced plans to support Java 16 as the next major release, with a planned release date of **May 2024**. This means that Java 16 will likely be the last major version released before Java 17.\n",
       "\n",
-      "### **I/O Operations**\n",
+      "Here are some key features and updates in Java 17:\n",
       "\n",
-      "For I/O-intensive tasks like data processing, file operations, and network communication, Java is generally faster than Python. This is because Java's interpretation mode (just-in-time compilation) and its robust memory management system enable it to handle disk I/O operations efficiently.\n",
+      "* **Improved performance**: Java 17 includes several performance optimizations, such as improved garbage collection, better caching, and enhanced support for parallelism.\n",
+      "* **New language features**: Java 17 introduces several new language features, including:\n",
+      " + **Switch expressions**: A concise way to switch on multiple conditions using a single expression.\n",
+      " + **Pattern matching**: Simplifies string pattern matching using regular expressions.\n",
+      " + **Functional interfaces**: Allows for more expressive and concise code by defining functional interfaces as lambda expressions or method references.\n",
+      "* **Improved security**: Java 17 includes several security-related updates, including:\n",
+      " + **Input validation improvements**: Enhances input validation to prevent common web application vulnerabilities.\n",
+      " + **Sandboxed environments**: Supports the creation of sandboxed environments for running applications with elevated privileges.\n",
       "\n",
-      "```python\n",
-      "import time\n",
+      "### Example Use Case\n",
       "\n",
-      "# Java example\n",
-      "class DiskIO:\n",
-      "    def __init__(self):\n",
-      "        self.file = open(\"example.txt\", \"r\")\n",
+      "To give you a better idea of how these new features work in practice, here's an example use case:\n",
       "\n",
-      "    def read(self):\n",
-      "        return self.file.read()\n",
+      "```java\n",
+      "// Java 17 code\n",
+      "public class MyClass {\n",
+      "    public static void main(String[] args) {\n",
+      "        String input = \"Hello World!\";\n",
       "\n",
-      "    def write(self, content):\n",
-      "        self.file.write(content)\n",
+      "        // Switch expression to match the first non-null character\n",
+      "        int index = Arrays.stream(input.split(\"\\\\s+\")).mapToInt(String::length).findFirst().orElse(-1);\n",
+      "        System.out.println(\"First non-null character at position \" + index);\n",
       "\n",
-      "disk_io_java = DiskIO()\n",
-      "start_time = time.time()\n",
-      "content = disk_io_java.read(1024)\n",
-      "end_time = time.time()\n",
-      "print(f\"Java I/O operation time: {end_time - start_time} seconds\")\n",
-      "\n",
-      "# Python example\n",
-      "import numpy as np\n",
-      "\n",
-      "def read_data(size):\n",
-      "    return np.random.rand(size).tolist()\n",
-      "\n",
-      "size = 1024 * 1024\n",
-      "start_time = time.time()\n",
-      "data = read_data(size)\n",
-      "end_time = time.time()\n",
-      "print(f\"Python I/O operation time: {end_time - start_time} seconds\")\n",
+      "        // Pattern matching for strings\n",
+      "        String pattern = \"^Hello$\";\n",
+      "        if (input.startsWith(pattern)) {\n",
+      "            System.out.println(\"String matches the pattern\");\n",
+      "        } else {\n",
+      "            System.out.println(\"String does not match the pattern\");\n",
+      "        }\n",
+      "    }\n",
+      "}\n",
       "```\n",
       "\n",
-      "### **Compilation and Optimization**\n",
+      "In this example, we use a switch expression to find the first non-null character in the input string and print its position. We also demonstrate pattern matching using regular expressions.\n",
       "\n",
-      "For compiled languages like Java, compilation can result in significant performance gains. Java's Just-In-Time (JIT) compiler translates the bytecode into native machine code at runtime.\n",
-      "\n",
-      "```bash\n",
-      "javac MyJavaClass.java\n",
-      "java -jar my-jar.jar\n",
-      "```\n",
-      "\n",
-      "On the other hand, Python interprets the code at runtime, which means there is no compilation step involved. However, Python can still be optimized using various techniques like caching, memoization, and Just-In-Time (JIT) compilation.\n",
-      "\n",
-      "```python\n",
-      "import time\n",
-      "\n",
-      "# Java example (interpreted)\n",
-      "class DiskIO:\n",
-      "    def __init__(self):\n",
-      "        self.file = open(\"example.txt\", \"r\")\n",
-      "\n",
-      "    def read(self):\n",
-      "        return self.file.read()\n",
-      "\n",
-      "# Python example (optimized using caching)\n",
-      "def cached_disk_io():\n",
-      "    cache = {}\n",
-      "    def read(size):\n",
-      "        if size not in cache:\n",
-      "            result = np.random.rand(size).tolist()\n",
-      "            cache[size] = result\n",
-      "        return cache[size]\n",
-      "    return read\n",
-      "\n",
-      "size = 1024 * 1024\n",
-      "start_time = time.time()\n",
-      "data = cached_disk_io()(size)\n",
-      "end_time = time.time()\n",
-      "print(f\"Java I/O operation time: {end_time - start_time} seconds\")\n",
-      "```\n",
-      "\n",
-      "### **Benchmarking**\n",
-      "\n",
-      "To get a more accurate picture of performance differences, let's use the `timeit` module to benchmark both languages.\n",
-      "\n",
-      "```python\n",
-      "import timeit\n",
-      "\n",
-      "# Java example\n",
-      "class DiskIO:\n",
-      "    def __init__(self):\n",
-      "        self.file = open(\"example.txt\", \"r\")\n",
-      "\n",
-      "    def read(self):\n",
-      "        return self.file.read()\n",
-      "\n",
-      "disk_io_java_benchmark = timeit.timeit(lambda: disk_io_java.read(1024), number=1000)\n",
-      "print(f\"Java I/O operation time (1000 iterations): {disk_io_java_benchmark} seconds\")\n",
-      "\n",
-      "# Python example\n",
-      "def cached_disk_io():\n",
-      "    cache = {}\n",
-      "    def read(size):\n",
-      "        if size not in cache:\n",
-      "            result = np.random.rand(size).tolist()\n",
-      "            cache[size] = result\n",
-      "        return cache[size]\n",
-      "    return read\n",
-      "\n",
-      "cached_disk_io_benchmark = timeit.timeit(lambda: cached_disk_io(), number=1000)\n",
-      "print(f\"Python I/O operation time (1000 iterations): {cached_disk_io_benchmark} seconds\")\n",
-      "```\n",
-      "\n",
-      "In conclusion, both Python and Java have their strengths and weaknesses when it comes to performance. The choice between the two ultimately depends on the specific use case, task, and requirements of your project.\n",
-      "\n",
-      "**Example Use Cases:**\n",
-      "\n",
-      "*   **Java:** Used in Android app development, web development (using Spring Boot or Hibernate), and large-scale enterprise applications due to its robust memory management system and support for multithreading.\n",
-      "*   **Python:** Used in data science, machine learning, natural language processing, and scientific computing tasks due to its simplicity, flexibility, and extensive libraries.\n",
-      "\n",
-      "**Conclusion:**\n",
-      "\n",
-      "In general, Java is faster than Python when it comes to I/O-intensive tasks. However, Python's versatility, ease of use, and extensive libraries make it a better choice for many applications. Ultimately, the choice between Python and Java depends on your specific needs and requirements.\n"
+      "Note that this is just a brief overview of the latest features in Java 17. For more information, I recommend checking out the official Oracle documentation or reviewing the language documentation for detailed information on each new feature."
      ]
     }
    ],
    "source": [
-    "\n",
-    "response = ollama.chat(model = MODEL, messages = messages)\n",
-    "print(response['message']['content'])"
+    "question = input(\"Please enter your question:\")\n",
+    "ask_ollama_tutor(question)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e2a7d1-cb42-4b78-8702-50c31f505d89",
+   "id": "86cb917a-4709-48cc-8d99-4a89ca246630",
    "metadata": {},
    "outputs": [],
    "source": []
